split/kernel/nginx-l7-l4-logical-http/2-ingress/4-Ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-nginx-ingress
  namespace: sandbox
  #annotations:
  #  kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx
  rules:
  - host: http-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nettool
            port:
              number: 80
